@@ -1,4 +1,4 @@
-.TH JALV.GTK "19 Apr 2012"
+.TH JALV.GTK "10 Oct 2015"
 
 .SH NAME
 .B jalv.gtk \- Run an LV2 plugin as a JACK application (Gtk version).
@@ -31,6 +31,10 @@ Load state from state directory.
 .TP
 \fB\-d\fR, \fB\-\-dump\fR
 Dump plugin <=> UI communication.
+
+.TP
+\fB\-t\fR, \fB\-\-trace\fR
+Print trace messages from plugin.
 
 .TP
 \fB\-b SIZE\fR
