@@ -6,6 +6,7 @@ jalv (1.4.7) unstable;
   * Set Jack port order metadata
   * Allow Jack client name to be set from command line (thanks Adam Avramov)
   * Add command prompt to console version for changing controls
+  * Add option to enable plugin trace log messages
   * Exit on Jack shutdown (Patch from Robin Gareus)
   * Report Jack latency (Patch from Robin Gareus)
   * Exit GUI versions on interrupt
@@ -13,7 +14,7 @@ jalv (1.4.7) unstable;
   * Use moc-qt4 if present for systems with multiple Qt versions
   * Add Qt5 version
 
- -- David Robillard <d@drobilla.net>  Fri, 09 Oct 2015 22:58:33 -0400
+ -- David Robillard <d@drobilla.net>  Sat, 10 Oct 2015 14:11:00 -0400
 
 jalv (1.4.6) stable;
 
